deployments/workshopper-deploy.yaml
apiVersion: v1
items:
  
- kind: DeploymentConfig
  apiVersion: "v1"
  metadata:
    annotations:
      description: Deploys the workshop
      template.alpha.openshift.io/wait-for-ready: 'true'
    name: 'workshopper'
  spec:
    replicas: 1
    selector:
      name: 'workshopper'
    strategy: 
        type: 'Rolling'
    paused: false 
    revisionHistoryLimit: 2 
    minReadySeconds:
            
    template:
      metadata:
        labels:
          name: 'workshopper'
        name: 'workshopper'
      spec:
        containers:
          - env:
            - name: WORKSHOPS_URLS
              value: 'https://raw.githubusercontent.com/redhat-capgemini-exchange/my-thai-star-workshop/master/_workshop1.yml'

            - name: LOG_TO_STDOUT
              value: 'true'

            image: ''
            
            name: 'workshopper'
            
            resources:
              limits:
                memory: '512Mi'

    triggers:
      - imageChangeParams:
          automatic: true
          containerNames:
            - 'workshopper'
          from:
            kind: ImageStreamTag
            name: 'workshopper-image:latest'
        type: ImageChange
      - type: ConfigChange

- kind: Service
  apiVersion: "v1"
  metadata:
    annotations:
      description: Exposes the app server
    name: 'workshopper'
  spec:
    ports:
      - name: 'workshopper'
        port: 8080
        targetPort: 8080
    selector:
      name: 'workshopper'

- kind: Route
  apiVersion: "v1"
  metadata:
    name: 'workshopper'
    annotations:
      kubernetes.io/tls-acme: "true"
  spec:
    to:
      kind: Service
      name: 'workshopper'
    port:
      targetPort: workshopper

kind: List
metadata: []
